--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -415,6 +415,7 @@
   "New email": "Nouveau courriel",
   "Email can't be empty": "L'adresse électronique ne peut pas être vide",
   "Your import completed": "Votre importation est terminée",
+  "Sorry, invalid embed link": "Sorry, invalid embed link",
   "Previous match": "Occurence précédente",
   "Next match": "Prochaine occurence",
   "Find and replace": "Rechercher et remplacer",
@@ -512,6 +513,7 @@
   "Outdent": "Désindenter",
   "Video": "Vidéo",
   "None": "Abc",
+  "Delete embed": "Delete embed",
   "Could not import file": "Le fichier n'a pas pu être importé",
   "Unsubscribed from document": "Se désabonner du document",
   "Unsubscribed from collection": "Désabonné de la collection",
