--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -1,5 +1,6 @@
 {
   "New API key": "Nový API klíč",
+  "Delete": "Odstranit",
   "Revoke": "Zrušit",
   "Revoke API key": "Revoke API key",
   "Revoke token": "Odvolat tokeny",
@@ -25,7 +26,6 @@
   "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "Archivací této sbírky dojde také k archivaci všech dokumentů v ní. Dokumenty z kolekce již nebudou viditelné ve výsledcích vyhledávání.",
   "Restore": "Obnovit",
   "Collection restored": "Sbírka obnovena",
-  "Delete": "Odstranit",
   "Delete collection": "Odstranit sbírku",
   "New template": "Nová šablona",
   "Delete comment": "Odstranit komentář",
@@ -326,12 +326,25 @@
   "Everyone in the workspace": "Všichni v pracovišti",
   "{{ count }} member": "{{ count }} člen",
   "{{ count }} member_plural": "{{ count }} členů",
+  "Only lowercase letters, digits and dashes allowed": "Jsou povolena pouze malá písmena, číslice a pomlčky",
+  "Sorry, this link has already been used": "Je nám líto, tento odkaz již byl použit",
+  "Public link copied to clipboard": "Veřejný odkaz zkopírován do schránky",
+  "Web": "Web",
+  "Allow anyone with the link to access": "Povolit přístup komukoliv s odkazem",
+  "Publish to internet": "Zveřejnit na internetu",
+  "Search engine indexing": "Indexace vyhledávání",
+  "Disable this setting to discourage search engines from indexing the page": "Zakažte toto nastavení, abyste odradili vyhledávače od indexování stránky",
+  "Show last modified": "Show last modified",
+  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Pozvat",
   "{{ userName }} was added to the collection": "{{ userName }} byl přidán do sbírky",
   "{{ count }} people added to the collection": "{{ count }} lidí přidáno do kolekce",
   "{{ count }} people added to the collection_plural": "{{ count }} lidí přidáno do kolekce",
   "{{ count }} people and {{ count2 }} groups added to the collection": "{{ count }} lidí a {{ count2 }} skupin přidáno do kolekce",
   "{{ count }} people and {{ count2 }} groups added to the collection_plural": "{{ count }} lidí a {{ count2 }} skupin přidáno do kolekce",
+  "Switch to dark": "Přepnout do tmavého režimu",
+  "Switch to light": "Přepnout do světlého režimu",
   "Add": "Přidat",
   "Add or invite": "Přidat nebo pozvat",
   "Viewer": "Prohlížející",
@@ -356,17 +369,8 @@
   "Active <1></1> ago": "Aktivní před <1></1>",
   "Never signed in": "Nikdy nepřihlášen",
   "Leave": "Odejít",
-  "Only lowercase letters, digits and dashes allowed": "Jsou povolena pouze malá písmena, číslice a pomlčky",
-  "Sorry, this link has already been used": "Je nám líto, tento odkaz již byl použit",
-  "Public link copied to clipboard": "Veřejný odkaz zkopírován do schránky",
-  "Web": "Web",
-  "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared": "Kdokoli s odkazem má přístup, protože dokument dědí oprávnění po nadřazeném dokumentu <2>{{documentTitle}}</2>",
-  "Allow anyone with the link to access": "Povolit přístup komukoliv s odkazem",
-  "Publish to internet": "Zveřejnit na internetu",
-  "Search engine indexing": "Indexace vyhledávání",
-  "Disable this setting to discourage search engines from indexing the page": "Zakažte toto nastavení, abyste odradili vyhledávače od indexování stránky",
-  "Show last modified": "Show last modified",
-  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "Vložené dokumenty nejsou sdíleny na webu. Změnit sdílení pro povolení přístupu (toto bude v budoucnu výchozí chování)",
   "{{ userName }} was added to the document": "{{ userName }} byl přidán do dokumentu",
   "{{ count }} people added to the document": "{{ count }} lidí bylo přidáno do dokumentu",
@@ -571,6 +575,7 @@
   "Share link revoked": "Odkaz na sdílení zrušen",
   "Share link copied": "Odkaz pro sdílení zkopírován",
   "Share options": "Možnosti sdílení",
+  "Go to collection": "Go to collection",
   "Go to document": "Přejít do dokumentu",
   "Revoke link": "Zrušit odkaz",
   "Contents": "Obsah",
@@ -670,8 +675,6 @@
   "Show contents": "Zobrazit obsah",
   "available when headings are added": "k dispozici, když jsou přidávány nadpisy",
   "Edit {{noun}}": "Upravit {{noun}}",
-  "Switch to dark": "Přepnout do tmavého režimu",
-  "Switch to light": "Přepnout do světlého režimu",
   "Archived": "Archivované",
   "Save draft": "Uložit koncept",
   "Done editing": "Uložit úpravy",
@@ -713,7 +716,6 @@
   "Backlinks": "Zpětné odkazy",
   "Close": "Zavřít",
   "This document is large which may affect performance": "This document is large which may affect performance",
-  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} používá {{ appName }} ke sdílení dokumentů, pro pokračování se prosím přihlaste.",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "Opravdu chcete odstranit šablonu <em>{{ documentTitle }}</em>?",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "Jsi si tím jisti? Při odstranění dokumentu <em>{{ documentTitle }}</em> se smaže i celá jeho historie</em>.",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "Jsi si tím jisti? Odstraněním dokumentu <em>{{ documentTitle }}</em> se smaže i celá jeho historie a <em>{{ any }} vnořený dokument</em>.",
@@ -1004,6 +1006,7 @@
   "Guest": "Host",
   "Never used": "Never used",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "Are you sure you want to delete the {{ appName }} application? This cannot be undone.",
+  "Title": "Title",
   "Shared by": "Sdíleno uživatelem",
   "Date shared": "Datum zveřejnění",
   "Last accessed": "Poslední přístup",
@@ -1146,6 +1149,7 @@
   "You can create templates to help your team create consistent and accurate documentation.": "Můžete vytvářet šablony, které vašemu týmu pomohou vytvořit konzistentní a přesnou dokumentaci.",
   "Alphabetical": "Abecedně",
   "There are no templates just yet.": "Zatím nejsou k dispozici žádné šablony.",
+  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} používá {{ appName }} ke sdílení dokumentů, pro pokračování se prosím přihlaste.",
   "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.": "Potvrzovací kód byl odeslán na vaši e-mailovou adresu, zadejte jej prosím níže pro trvalé odstranění tohoto pracovního prostoru.",
   "Confirmation code": "Potvrzovací kód",
   "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "Smazání <1>{{workspaceName}}</1> pracovního prostoru odstraní všechny kolekce, dokumenty, uživatele a související data. Budete okamžitě odhlášeni z {{appName}}.",
