--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -326,12 +326,25 @@
   "Everyone in the workspace": "Alle im Arbeitsbereich",
   "{{ count }} member": "{{ count }} Mitglied",
   "{{ count }} member_plural": "{{ count }} Mitglieder",
+  "Only lowercase letters, digits and dashes allowed": "Nur Kleinbuchstaben, Ziffern und Bindestriche zulässig",
+  "Sorry, this link has already been used": "Entschuldige, dieser Link wurde bereits verwendet",
+  "Public link copied to clipboard": "Öffentlicher Link in Zwischenablage kopiert",
+  "Web": "Web",
+  "Allow anyone with the link to access": "Jedem mit dem Link Zugriff erlauben",
+  "Publish to internet": "Im Internet veröffentlichen",
+  "Search engine indexing": "Suchmaschinenindexierung",
+  "Disable this setting to discourage search engines from indexing the page": "Deaktivieren Sie diese Einstellung, um Suchmaschinen davon abzuhalten, die Seite zu indizieren",
+  "Show last modified": "Änderungsdatum anzeigen",
+  "Display the last modified timestamp on the shared page": "Zeige das Änderungsdatum auf der geteilten Seite",
+  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Einladen",
   "{{ userName }} was added to the collection": "{{ userName }} wurde zur Sammlung hinzugefügt",
   "{{ count }} people added to the collection": "{{ count }} Personen zur Kollektion hinzugefügt",
   "{{ count }} people added to the collection_plural": "{{ count }} Personen zur Kollektion hinzugefügt",
   "{{ count }} people and {{ count2 }} groups added to the collection": "{{ count }} Personen und {{ count2 }} Gruppen zur Kollektion hinzugefügt",
   "{{ count }} people and {{ count2 }} groups added to the collection_plural": "{{ count }} Personen und {{ count2 }} Gruppen zur Kollektion hinzugefügt",
+  "Switch to dark": "Wechsel zum Dark-Mode",
+  "Switch to light": "Wechsel zum Light-Mode",
   "Add": "Hinzufügen",
   "Add or invite": "Hinzufügen oder einladen",
   "Viewer": "Betrachter",
@@ -356,17 +369,8 @@
   "Active <1></1> ago": "Aktiv vor <1></1>",
   "Never signed in": "Nie angemeldet",
   "Leave": "Verlassen",
-  "Only lowercase letters, digits and dashes allowed": "Nur Kleinbuchstaben, Ziffern und Bindestriche zulässig",
-  "Sorry, this link has already been used": "Entschuldige, dieser Link wurde bereits verwendet",
-  "Public link copied to clipboard": "Öffentlicher Link in Zwischenablage kopiert",
-  "Web": "Web",
-  "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared": "Jeder mit diesem Link kann darauf zugreifen, da das übergeordnete Dokument, <2>{{documentTitle}}</2>, geteilt wird",
-  "Allow anyone with the link to access": "Jedem mit dem Link Zugriff erlauben",
-  "Publish to internet": "Im Internet veröffentlichen",
-  "Search engine indexing": "Suchmaschinenindexierung",
-  "Disable this setting to discourage search engines from indexing the page": "Deaktivieren Sie diese Einstellung, um Suchmaschinen davon abzuhalten, die Seite zu indizieren",
-  "Show last modified": "Änderungsdatum anzeigen",
-  "Display the last modified timestamp on the shared page": "Zeige das Änderungsdatum auf der geteilten Seite",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "Verschachtelte Dokumente werden nicht im Web geteilt. Schalten Sie die Freigabe um, um den Zugriff zu ermöglichen, dies wird das Standardverhalten in Zukunft sein",
   "{{ userName }} was added to the document": "{{ userName }} wurde dem Dokument hinzugefügt",
   "{{ count }} people added to the document": "{{ count }} Personen zu dem Dokument eingeladen",
@@ -571,6 +575,7 @@
   "Share link revoked": "Freigabelink widerrufen",
   "Share link copied": "Freigabelink wurde kopiert",
   "Share options": "Teilen-Einstellungen",
+  "Go to collection": "Go to collection",
   "Go to document": "Zum Dokument gehen",
   "Revoke link": "Link widerrufen",
   "Contents": "Inhalte",
@@ -670,8 +675,6 @@
   "Show contents": "Inhalt anzeigen",
   "available when headings are added": "verfügbar, wenn Überschriften hinzugefügt werden",
   "Edit {{noun}}": "{{noun}} bearbeiten",
-  "Switch to dark": "Wechsel zum Dark-Mode",
-  "Switch to light": "Wechsel zum Light-Mode",
   "Archived": "Archiviert",
   "Save draft": "Entwurf speichern",
   "Done editing": "Bearbeitung abschließen",
@@ -713,7 +716,6 @@
   "Backlinks": "Backlinks",
   "Close": "Schließen",
   "This document is large which may affect performance": "Dieses Dokument ist groß und kann die Leistung negativ beeinträchtigen",
-  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} verwendet {{ appName }}, um Dokumente zu teilen. Bitte melde dich an, um fortzufahren.",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "Möchtest du die Vorlage <em>{{ documentTitle }}</em> wirklich löschen?",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "Bist du sicher? Durch Löschen des Dokuments <em>{{ documentTitle }}</em> wird auch der gesamte Verlauf davon gelöscht</em>.",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "Bist du sicher? Durch Löschen des Dokuments <em>{{ documentTitle }}</em> wird der gesamte Verlauf sowie <em>{{ any }} Unterdokumente</em> gelöscht.",
@@ -1004,6 +1006,7 @@
   "Guest": "Gast",
   "Never used": "Niemals verwendet",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "Sind Sie sicher, dass Sie die {{ appName }}-Anwendung löschen möchten? Dies kann nicht rückgängig gemacht werden.",
+  "Title": "Title",
   "Shared by": "Geteilt durch",
   "Date shared": "Datum geteilt",
   "Last accessed": "Letzter Zugriff",
@@ -1146,6 +1149,7 @@
   "You can create templates to help your team create consistent and accurate documentation.": "Du kannst Vorlagen erstellen, um deinem Team zu helfen, eine konsistente und genaue Dokumentation zu schaffen.",
   "Alphabetical": "Alphabetisch",
   "There are no templates just yet.": "Es gibt noch keine Vorlagen.",
+  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} verwendet {{ appName }}, um Dokumente zu teilen. Bitte melde dich an, um fortzufahren.",
   "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.": "Ein Bestätigungscode wurde an deine E-Mail-Adresse gesendet. Bitte gebe diesen Code unten ein, um diesen Arbeitsbereich endgültig zu löschen.",
   "Confirmation code": "Bestätigungscode",
   "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "Das Löschen des <1>{{workspaceName}}</1>-Arbeitsbereichs entfernt alle Kollektionen, Dokumente, Benutzer und zugehörigen Daten. Du wirst sofort von {{appName}} abgemeldet.",
