--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -1,5 +1,6 @@
 {
   "New API key": "Új API-kulcs",
+  "Delete": "Törlés",
   "Revoke": "Visszavonás",
   "Revoke API key": "Revoke API key",
   "Revoke token": "Token visszavonása",
@@ -25,7 +26,6 @@
   "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "A gyűjtemény archiválása a benne lévő összes dokumentumot is archiválja. A gyűjteményből származó dokumentumok többé nem lesznek láthatóak a keresési eredményekben.",
   "Restore": "Helyreállítás",
   "Collection restored": "Gyűjtemény helyreállítva",
-  "Delete": "Törlés",
   "Delete collection": "Gyűjtemény törlése",
   "New template": "Új sablon",
   "Delete comment": "Hozzászólás törlése",
@@ -326,12 +326,25 @@
   "Everyone in the workspace": "Everyone in the workspace",
   "{{ count }} member": "{{ count }} tag",
   "{{ count }} member_plural": "{{ count }} tag",
+  "Only lowercase letters, digits and dashes allowed": "Csak kisbetűk, számok és kötőjelek használhatók",
+  "Sorry, this link has already been used": "Elnézést, ez a hivatkozás már használatban van",
+  "Public link copied to clipboard": "Public link copied to clipboard",
+  "Web": "Web",
+  "Allow anyone with the link to access": "Allow anyone with the link to access",
+  "Publish to internet": "Publikálás interneten",
+  "Search engine indexing": "Keresőmotor indexelése",
+  "Disable this setting to discourage search engines from indexing the page": "Disable this setting to discourage search engines from indexing the page",
+  "Show last modified": "Show last modified",
+  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Meghívás",
   "{{ userName }} was added to the collection": "{{ userName }} hozzáadva a gyűjteményhez",
   "{{ count }} people added to the collection": "{{ count }} személy hozzáadva a gyűjteményhez",
   "{{ count }} people added to the collection_plural": "{{ count }} személy hozzáadva a gyűjteményhez",
   "{{ count }} people and {{ count2 }} groups added to the collection": "{{ count }} személy és {{ count2 }} csoport hozzáadva a gyűjteményhez",
   "{{ count }} people and {{ count2 }} groups added to the collection_plural": "{{ count }} személy és {{ count2 }} csoport hozzáadva a gyűjteményhez",
+  "Switch to dark": "Switch to dark",
+  "Switch to light": "Switch to light",
   "Add": "Hozzáadás",
   "Add or invite": "Add or invite",
   "Viewer": "Megtekintő",
@@ -356,17 +369,8 @@
   "Active <1></1> ago": "Utoljára aktív: <1></1>",
   "Never signed in": "Sohasem lépett be",
   "Leave": "Elhagy",
-  "Only lowercase letters, digits and dashes allowed": "Csak kisbetűk, számok és kötőjelek használhatók",
-  "Sorry, this link has already been used": "Elnézést, ez a hivatkozás már használatban van",
-  "Public link copied to clipboard": "Public link copied to clipboard",
-  "Web": "Web",
-  "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared": "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared",
-  "Allow anyone with the link to access": "Allow anyone with the link to access",
-  "Publish to internet": "Publikálás interneten",
-  "Search engine indexing": "Keresőmotor indexelése",
-  "Disable this setting to discourage search engines from indexing the page": "Disable this setting to discourage search engines from indexing the page",
-  "Show last modified": "Show last modified",
-  "Display the last modified timestamp on the shared page": "Display the last modified timestamp on the shared page",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "A beágyazott dokumentumok nem kerülnek megosztásra a weben. Kapcsolja be a megosztást a hozzáférés engedélyezéséhez, ez lesz az alapértelmezett viselkedés a jövőben.",
   "{{ userName }} was added to the document": "{{ userName }} eltávolítva a dokumentumból",
   "{{ count }} people added to the document": "{{ count }} eltávolítva a dokumentumból",
@@ -571,6 +575,7 @@
   "Share link revoked": "Hivatkozás megosztás visszavonva",
   "Share link copied": "Megosztási hivatkozás másolva",
   "Share options": "Megosztási beállítások",
+  "Go to collection": "Go to collection",
   "Go to document": "Tovább a dokumentumhoz",
   "Revoke link": "Hivatkozás visszavonása",
   "Contents": "Tartalom",
@@ -670,8 +675,6 @@
   "Show contents": "Tartalomjegyzék megjelenítése",
   "available when headings are added": "available when headings are added",
   "Edit {{noun}}": "Edit {{noun}}",
-  "Switch to dark": "Switch to dark",
-  "Switch to light": "Switch to light",
   "Archived": "Archiválva",
   "Save draft": "Piszkozat mentése",
   "Done editing": "Változtatások mentése",
@@ -713,7 +716,6 @@
   "Backlinks": "Vissza-hivatkozások",
   "Close": "Bezár",
   "This document is large which may affect performance": "This document is large which may affect performance",
-  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} is using {{ appName }} to share documents, please login to continue.",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.",
@@ -1004,6 +1006,7 @@
   "Guest": "Vendég",
   "Never used": "Never used",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "Are you sure you want to delete the {{ appName }} application? This cannot be undone.",
+  "Title": "Title",
   "Shared by": "Megosztotta: ",
   "Date shared": "Date shared",
   "Last accessed": "Last accessed",
@@ -1146,6 +1149,7 @@
   "You can create templates to help your team create consistent and accurate documentation.": "Sablonokat hozhat létre, hogy segítse a csapatát a következetes és pontos dokumentáció létrehozásában.",
   "Alphabetical": "Betűrendi",
   "There are no templates just yet.": "Jelenleg még nincsenek sablonok.",
+  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} is using {{ appName }} to share documents, please login to continue.",
   "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.": "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.",
   "Confirmation code": "Megerősítő kód",
   "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.",
