--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -1,5 +1,6 @@
 {
   "New API key": "Nuova chiave API",
+  "Delete": "Cancella",
   "Revoke": "Revoca",
   "Revoke API key": "Revoke API key",
   "Revoke token": "Revoca token",
@@ -25,7 +26,6 @@
   "Archiving this collection will also archive all documents within it. Documents from the collection will no longer be visible in search results.": "L'archiviazione di questa raccolta archivierà anche tutti i documenti al suo interno. I documenti della raccolta non saranno più visibili nei risultati di ricerca.",
   "Restore": "Ripristina",
   "Collection restored": "Raccolta ripristinata",
-  "Delete": "Cancella",
   "Delete collection": "Elimina raccolta",
   "New template": "Nuovo modello",
   "Delete comment": "Cancella commento",
@@ -326,12 +326,25 @@
   "Everyone in the workspace": "Tutti nel workspace",
   "{{ count }} member": "{{ count }} membro",
   "{{ count }} member_plural": "{{ count }} membri",
+  "Only lowercase letters, digits and dashes allowed": "Sono consentite solo lettere minuscole, cifre e trattini",
+  "Sorry, this link has already been used": "Spiacenti, questo link è già stato utilizzato",
+  "Public link copied to clipboard": "Link pubblico copiato negli appunti",
+  "Web": "Web",
+  "Allow anyone with the link to access": "Consenti a chiunque abbia il link di accedere",
+  "Publish to internet": "Pubblica su internet",
+  "Search engine indexing": "Indicizzazione nei motori di ricerca",
+  "Disable this setting to discourage search engines from indexing the page": "Disabilita questa impostazione per scoraggiare i motori di ricerca dall'indicizzare la pagina",
+  "Show last modified": "Mostra l'ultima modifica",
+  "Display the last modified timestamp on the shared page": "Mostra la data dell'ultima modifica nella pagina condivisa",
+  "All documents in this collection will be shared on the web, including any new documents added later": "All documents in this collection will be shared on the web, including any new documents added later",
   "Invite": "Invita",
   "{{ userName }} was added to the collection": "{{ userName }} stato aggiunto alla raccolta",
   "{{ count }} people added to the collection": "Persone aggiunte alla collezione",
   "{{ count }} people added to the collection_plural": "{{ count }} Persone aggiunte alla collezione",
   "{{ count }} people and {{ count2 }} groups added to the collection": "Aggiunte alla raccolta {{ count }} persone oltre a {{ count2 }} gruppi",
   "{{ count }} people and {{ count2 }} groups added to the collection_plural": "Aggiunte alla raccolta {{ count }} persone oltre a {{ count2 }} gruppi",
+  "Switch to dark": "Passa al tema scuro",
+  "Switch to light": "Passa al tema chiaro",
   "Add": "Aggiungi",
   "Add or invite": "Aggiungi o invita",
   "Viewer": "Visualizzatore",
@@ -356,17 +369,8 @@
   "Active <1></1> ago": "Attivo <1></1> fa",
   "Never signed in": "Mai effettuato l'accesso",
   "Leave": "Lascia",
-  "Only lowercase letters, digits and dashes allowed": "Sono consentite solo lettere minuscole, cifre e trattini",
-  "Sorry, this link has already been used": "Spiacenti, questo link è già stato utilizzato",
-  "Public link copied to clipboard": "Link pubblico copiato negli appunti",
-  "Web": "Web",
-  "Anyone with the link can access because the parent document, <2>{{documentTitle}}</2>, is shared": "Chiunque abbia il link può accedere poiché il documento principale, <2>{{documentTitle}}</2>, risulta condiviso",
-  "Allow anyone with the link to access": "Consenti a chiunque abbia il link di accedere",
-  "Publish to internet": "Pubblica su internet",
-  "Search engine indexing": "Indicizzazione nei motori di ricerca",
-  "Disable this setting to discourage search engines from indexing the page": "Disabilita questa impostazione per scoraggiare i motori di ricerca dall'indicizzare la pagina",
-  "Show last modified": "Mostra l'ultima modifica",
-  "Display the last modified timestamp on the shared page": "Mostra la data dell'ultima modifica nella pagina condivisa",
+  "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the containing collection, <2>{sharedParent.sourceTitle}</2>, is shared",
+  "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared": "Anyone with the link can access because the parent document, <2>{sharedParent.sourceTitle}</2>, is shared",
   "Nested documents are not shared on the web. Toggle sharing to enable access, this will be the default behavior in the future": "I documenti nidificati non sono condivisi sul web. Attiva la condivisione per abilitare l'accesso, questo sarà il comportamento predefinito in futuro.\n\n\n\n\n\n\n\n\n",
   "{{ userName }} was added to the document": "È stato aggiunto al documento",
   "{{ count }} people added to the document": "È stato aggiunto al documento",
@@ -571,6 +575,7 @@
   "Share link revoked": "Link condivisione revocato",
   "Share link copied": "Link di condivisione copiato",
   "Share options": "Opzioni di condivisione",
+  "Go to collection": "Go to collection",
   "Go to document": "Vai al documento",
   "Revoke link": "Revoca il link",
   "Contents": "Contenuti",
@@ -670,8 +675,6 @@
   "Show contents": "Mostra contenuti",
   "available when headings are added": "disponibile quando vengono aggiunte le intestazioni",
   "Edit {{noun}}": "Modifica {{noun}}",
-  "Switch to dark": "Passa al tema scuro",
-  "Switch to light": "Passa al tema chiaro",
   "Archived": "Archiviati",
   "Save draft": "Salva bozza",
   "Done editing": "Modifica Completata",
@@ -713,7 +716,6 @@
   "Backlinks": "Backlink",
   "Close": "Chiudi",
   "This document is large which may affect performance": "This document is large which may affect performance",
-  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} utilizza {{ appName }} per condividere documenti, effettua il login per continuare.",
   "Are you sure you want to delete the <em>{{ documentTitle }}</em> template?": "Sei sicuro di voler eliminare il template <em>{{ documentTitle }}</em>?",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history</em>.": "Sei sicuro? L'eliminazione del documento <em>{{ documentTitle }}</em> cancellerà tutta la sua cronologia</em>.",
   "Are you sure about that? Deleting the <em>{{ documentTitle }}</em> document will delete all of its history and <em>{{ any }} nested document</em>.": "Sei sicuro? L'eliminazione del documento <em>{{ documentTitle }}</em> cancellerà tutta la sua cronologia e <em>{{ any }} documenti annidati</em>.",
@@ -1004,6 +1006,7 @@
   "Guest": "Guest",
   "Never used": "Never used",
   "Are you sure you want to delete the {{ appName }} application? This cannot be undone.": "Are you sure you want to delete the {{ appName }} application? This cannot be undone.",
+  "Title": "Title",
   "Shared by": "Shared by",
   "Date shared": "Data condivisa",
   "Last accessed": "Ultima visita",
@@ -1146,6 +1149,7 @@
   "You can create templates to help your team create consistent and accurate documentation.": "Puoi creare modelli per aiutare il tuo team a creare una documentazione coerente e accurata.",
   "Alphabetical": "Alfabetico",
   "There are no templates just yet.": "Non ci sono modelli.",
+  "{{ teamName }} is using {{ appName }} to share documents, please login to continue.": "{{ teamName }} utilizza {{ appName }} per condividere documenti, effettua il login per continuare.",
   "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.": "A confirmation code has been sent to your email address, please enter the code below to permanently destroy this workspace.",
   "Confirmation code": "Confirmation code",
   "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.": "Deleting the <1>{{workspaceName}}</1> workspace will destroy all collections, documents, users, and associated data. You will be immediately logged out of {{appName}}.",
